--- a/src/app/tripwithus/tripwithus.component.html
+++ b/src/app/tripwithus/tripwithus.component.html
@@ -267,63 +267,55 @@
             <p class="content-para">
                 Explore our expert recommendations on nearby live events, festivals, tours, and music concerts around the U.S. with us! Get promo codes, best deals and discounts! After all, what completes your trip but a gala time at a fun event with family and friends!
                 </p>
-          <div class="categories">
-            <ul class="cat">
-              <!-- <li>
-                <ol class="type">
-                  <li><a href="#" data-filter="*" class="active">All</a></li>
-                  <li><a href="#" data-filter=".web">Web Design</a></li>
-                  <li><a href="#" data-filter=".photography">Photography</a></li>
-                  <li><a href="#" data-filter=".product">Product Design</a></li>
-                </ol>
-              </li> -->
-            </ul>
-            <div class="clearfix"></div>
-          </div>
-          <div class="row">
-            <div class="portfolio-items">
-              <div class="col-sm-6 col-md-3 col-lg-3 web">
-                <div class="portfolio-item">
-                  <div class="hover-bg nohover"> <a href="/assets/images/nyclarge.jpg" title="New York City" data-lightbox-gallery="gallery1">
-                    <div class="hover-text">
-                      <h4>New York City</h4>
-                    </div>
-                    <img src="/assets/images/nycsmall.jpg" class="img-responsive" alt="Project Title"> </a>
-                    </div>
-                </div>
-              </div>
-              <div class="col-sm-6 col-md-3 col-lg-3 product">
-                <div class="portfolio-item">
-                  <div class="hover-bg nohover"> <a href="02/assets/images/washingtonlarge.jpg" title="Project Title" data-lightbox-gallery="gallery1">
-                    <div class="hover-text">
-                      <h4>Grand Canyon</h4>
-                    </div>
-                    <img src="/assets/images/washingtonsmall.jpg" class="img-responsive" alt="Project Title"> </a> </div>
-                </div>
-              </div>
-              <div class="col-sm-6 col-md-3 col-lg-3 web">
-                <div class="portfolio-item">
-                  <div class="hover-bg nohover"> <a href="/assets/images/disneylarge.jpg" title="Project Title" data-lightbox-gallery="gallery1">
-                    <div class="hover-text">
-                      <h4>Disney World</h4>
-                    </div>
-                    <img src="/assets/images/disneysmall.jpg" class="img-responsive" alt="Project Title"> </a> </div>
-                </div>
-              </div>
 
-              <div class="col-sm-6 col-md-3 col-lg-3 photography">
-                <div class="portfolio-item">
-                  <div class="hover-bg nohover"> <a href="/assets/images/lasvegaslarge.jpg" title="Project Title" data-lightbox-gallery="gallery1">
-                    <div class="hover-text">
-                      <h4>Las Vegas</h4>
+                <div id="demo" class="carousel slide" data-ride="carousel">
+                  <!-- slideshow -->
+                  <div class="carousel-inner">
+                    <div class="item active">
+                      <img src="/assets/images/events_jazzshow.png" alt="Jazz Events">
+                        <div class="carousel-caption">
+                            <h3>Jazz Show</h3>
+                            <p>Chicago Events</p>
+                            <a href="#" style="color: white;font-weight: bold; font-size: 1.5em;">See here</a>
+                        </div>
                     </div>
-                    <img src="/assets/images/lasvegassmall.jpg" class="img-responsive" alt="Project Title"> </a> </div>
-                </div>
-              </div>
-
-
-            </div>
-          </div>
+                    <div class="item">
+                      <img src="/assets/images/events_operashow.png" alt="Opera Show">
+                        <div class="carousel-caption">
+                            <h3>Opera Show</h3>
+                            <p>Explore the classic operas</p>
+                            <a href="#" style="color: white;font-weight: bold; font-size: 1.5em;">See here</a>
+                        </div>
+                    </div>
+                    <div class="item">
+                      <img src="/assets/images/events_palmsprings.png" alt="Palm Springs">
+                        <div class="carousel-caption">
+                            <h3>Palm Springs Festivals</h3>
+                            <p>Film Festivals in California</p>
+                            <a href="#" style="color: white;font-weight: bold; font-size: 1.5em;">See here</a>
+                        </div>
+                    </div>
+                    <div class="item">
+                      <img src="/assets/images/events_zilkerKite.png" alt="Kite Events">
+                        <div class="carousel-caption">
+                            <h3>Kite Festival</h3>
+                            <p>Kite events in Austin</p>
+                            <a href="#" style="color: white;font-weight: bold; font-size: 1.5em;">See here</a>
+                        </div>
+                    </div>
+                    
+                  </div>
+                  <!-- Left and right controls -->
+               <a class="carousel-control-prev" href="#demo" data-slide="prev">
+                  <span class="carousel-control-prev-icon"></span>
+                </a>
+                <a class="carousel-control-next" href="#demo" data-slide="next">
+                  <span class="carousel-control-next-icon"></span>
+                </a>
+                </div>        
+                <p class="explore-para">
+                  Explore more events <a href="#"><em>here</em></a>
+                 </p>
         </div>
       </div>
 
