--- a/src/app/tripwithus/tripwithus.component.html
+++ b/src/app/tripwithus/tripwithus.component.html
@@ -268,7 +268,7 @@
                 Explore our expert recommendations on nearby live events, festivals, tours, and music concerts around the U.S. with us! Get promo codes, best deals and discounts! After all, what completes your trip but a gala time at a fun event with family and friends!
                 </p>
 
-                <div id="demo" class="carousel slide" data-ride="carousel">
+                <div id="myCarousel" class="carousel slide" data-ride="carousel">
                   <!-- slideshow -->
                   <div class="carousel-inner">
                     <div class="item active">
@@ -306,10 +306,10 @@
                     
                   </div>
                   <!-- Left and right controls -->
-               <a class="carousel-control-prev" href="#demo" data-slide="prev">
+               <a class="carousel-control-prev" href="#myCarousel" data-slide="prev">
                   <span class="carousel-control-prev-icon"></span>
                 </a>
-                <a class="carousel-control-next" href="#demo" data-slide="next">
+                <a class="carousel-control-next" href="#myCarousel" data-slide="next">
                   <span class="carousel-control-next-icon"></span>
                 </a>
                 </div>        
