images updates for carousel

--- a/src/app/tripwithus/tripwithus.component.html
+++ b/src/app/tripwithus/tripwithus.component.html
@@ -275,7 +275,7 @@
                       <img src="/assets/images/events_jazzshow.png" alt="Jazz Events">
                         <div class="carousel-caption">
                             <h3>Jazz Show</h3>
-                            <p>Chicago Events</p>
+                            <p>Festivals and Events</p>
                             <a href="#" style="color: white;font-weight: bold; font-size: 1.5em;">See here</a>
                         </div>
                     </div>
