--- a/src/app/aboutus/aboutus.component.html
+++ b/src/app/aboutus/aboutus.component.html
@@ -13,39 +13,39 @@
    
   </head>
 <body>
-  <!-- Navigation -->
-    <nav class="navbar navbar-expand-md">
-        <a class="navbar-brand"><img src="/assets/images/sheero.png" alt="sheero_logo" class="sheero"/></a>
-        <span class="navbar-text mx-auto">TripWithUs!</span>
+  <!--Navigation-->
+  <nav class="navbar navbar-expand-md">
+    <a class="navbar-brand"><img src="/assets/images/sheero.png" alt="sheero_logo" class="sheero"></a>
+    <span class="navbar-text mx-auto">TripWithUs!</span>
+    
+    <button class="navbar-toggler ml-auto navbar-light bg-light" data-toggle="collapse" data-target="#collapse_target">
+    
+        <span class="navbar-toggler-icon"></span>
+        
+    </button>
+    
+    <div class="collapse navbar-collapse" id="collapse_target">
+    <ul class="navbar-nav ml-auto">
+        
+        <li class="nav-item">
+            <a class="nav-link" routerLink="">Home</a>
+        </li>
+    
+        <li class="nav-item">
+            <a class="nav-link" routerLink="aboutus">About Us</a>
+        </li>
 
-        <button class="navbar-toggler ml-auto navbar-light bg-light" data-toggle="collapse" data-target="#collapse_target">
+        <li class="nav-item">
+            <a class="nav-link" routerLink="signup">Sign Up</a>
+        </li>
 
-            <span class="navbar-toggler-icon"></span>
+        <li class="nav-item">
+            <a class="nav-link" routerLink="login">Login</a>
+        </li>
 
-        </button>
-
-        <div class="collapse navbar-collapse" id="collapse_target">
-        <ul class="navbar-nav ml-auto">
-
-            <li class="nav-item">
-                <a class="nav-link" routerLink="">Home</a>
-            </li>
-
-            <li class="nav-item">
-                <a class="nav-link" routerLink="aboutus">About Us</a>
-            </li>
-
-            <li class="nav-item">
-                <a class="nav-link" routerLink="signup">Sign Up</a>
-            </li>
-
-            <li class="nav-item">
-                <a class="nav-link" routerLink="login">Login</a>
-            </li>
-
-        </ul>
-        </div>
-    </nav>
+    </ul>
+    </div>
+</nav>
     <div class="container">
         <h1>Destination List
             <a [routerLink]="['/book-create']" class="btn btn-default btn-lg">
@@ -94,54 +94,6 @@
 
 
     </div>
-
-     <!-- <div class="search-part">
-    //     <div class="input-group">
-    //         <input type="text" class="form-control" onkeyup="myFunction()" placeholder="Search...">
-    //         <div class="input-group-append">
-    //             <button class="btn btn-secondary typebutton">
-    //                 <i class="fa fa-search"></i>
-    //             </button>
-    //         </div>
-    //     </div>
-    // </div> -->
-<!-- <div class = "startHere"> -->
-    <!-- <div id="portfolio">
-        <div class="container">
-          <div class="section-title text-center center">
-            <h2>Destination Grid View</h2>
-            <hr>
-          </div>
-          <div class="categories">
-            <ul class="cat">
-              <li>
-                <ol class="type">
-                  <li><a routerLink="signup"  onclick = "gridChange();" filter="*" class="active">All</a></li>
-                  <li><a  routerLink="signup" onclick = "gridChange();" data-filter=".web">Web Design</a></li>
-                  <li><a  routerLink="signup" onclick = "gridChange();" data-filter=".photography">Photography</a></li>
-                  <li><a  routerLink="signup" onclick = "gridChange();" data-filter=".product">Product Design</a></li>
-                </ol>
-              </li>
-            </ul>
-            <div class="clearfix"></div>
-          </div>
-          </div> -->
-
-
-
-
-
-
-
-
-<!-- </div>
-    </div>
-
-        <div class="ptext">
-
-        </div>
-</div>
-</div> -->
 
 
 <!--Bootstrap4 JS files -->
