including editing, details, and booking of destination

--- a/src/app/book-create/book-create.component.css
+++ b/src/app/book-create/book-create.component.css
@@ -1,5 +1,5 @@
 .container{
-  background-image: url("xyz.jpg");
-  background-size: cover;
+  /* background-image: url("xyz.jpg");
+  background-size: cover; */
   height: 900px;
 }
