--- a/src/app/aboutus/aboutus.component.css
+++ b/src/app/aboutus/aboutus.component.css
@@ -4,7 +4,6 @@
     font-family: 'Lato', 'sans-serif';
     cursor: pointer;
     margin-left: 25px;
-    color: #fff;
   }
   
   nav .navbar-nav li {
@@ -12,11 +11,11 @@
     }
   
   nav .navbar-nav li a{
-  color: #fff !important;
+  color: #000 !important;
   }
   
   .navbar .navbar-text {
-    color: white!important;
+    color: black!important;
     font-weight: bold;
     font-size: 2.4em;
   }
