--- a/src/app/book-create/book-create.component.html
+++ b/src/app/book-create/book-create.component.html
@@ -4,23 +4,24 @@
       <div class="col-md-6">
         <form (ngSubmit)="saveBook()" #bookForm="ngForm">
           <div class="form-group">
-            <label for="name">ISBN</label>
+            <label for="name">Destination Name</label>
             <input type="text" class="form-control" [(ngModel)]="book.isbn" name="isbn" required>
           </div>
           <div class="form-group">
-            <label for="name">Title</label>
+            <label for="name">Destination Type</label>
             <input type="text" class="form-control" [(ngModel)]="book.title" name="title" required>
           </div>
           <div class="form-group">
-            <label for="name">Author</label>
+            <label for="name">Destination Budget</label>
             <input type="text" class="form-control" [(ngModel)]="book.author" name="author" required>
           </div>
+
+          <!-- <div class="form-group">
+            <label for="name"> Destination Best Times To Visit</label>
+            <input type="text" class="form-control" [(ngModel)]="book.published_year" name="published_year" required>
+          </div> -->
           <div class="form-group">
-            <label for="name">Published Year</label>
-            <input type="number" class="form-control" [(ngModel)]="book.published_year" name="published_year" required>
-          </div>
-          <div class="form-group">
-            <label for="name">Publisher</label>
+            <label for="name">Destination Image</label>
             <input type="text" class="form-control" [(ngModel)]="book.publisher" name="publisher" required>
           </div>
           <div class="form-group">
