--- a/src/app/book/book.component.html
+++ b/src/app/book/book.component.html
@@ -1,37 +1,20 @@
 
 <!DOCTYPE html>
 <html>
-<head>
-  <title>TripWithUs- Destinations!</title>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
 
- <!-- Destination CSS sheet -->
-
-
+  <head>
+    <title>TripWithUs!</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700,800,600,300' rel='stylesheet' type='text/css'>
+    
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+  
+   
+  </head>
 
-    <!--Bootsrap 4 CDN-->
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-    <link href="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
-    <script src="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
-    <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-    <script src="http://code.jquery.com/jquery-latest.js" type="text/javascript"></script>
-     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-    <script type="text/javascript" src="/assets/js/bootstrap.js"></script>
-    <script type="text/javascript" src="/assets/js/bootstrap.min.js"></script>
-    <script type="text/javascript" src="/assets/js/contact_me.js"></script>
-    <script type="text/javascript" src="/assets/js/jqBootstrapValidation.js"></script>
-    <script type="text/javascript" src="/assets/js/jquery.1.11.1.js"></script>
-    <script type="text/javascript" src="/assets/js/jquery.isotope.js"></script>
-    <script type="text/javascript" src="/assets/js/main.js"></script>
-    <script type="text/javascript" src="/assets/js/myFile.js"></script>
-    <script type="text/javascript" src="/assets/js/nivo-lightbox.js"></script>
-    <script type="text/javascript" src="/assets/js/SmoothScroll.js"></script>
-</head>
 <body>
   <!-- Navigation -->
     <nav class="navbar navbar-expand-md">
@@ -115,58 +98,10 @@
 
     </div>
 
-     <!-- <div class="search-part">
-    //     <div class="input-group">
-    //         <input type="text" class="form-control" onkeyup="myFunction()" placeholder="Search...">
-    //         <div class="input-group-append">
-    //             <button class="btn btn-secondary typebutton">
-    //                 <i class="fa fa-search"></i>
-    //             </button>
-    //         </div>
-    //     </div>
-    // </div> -->
-<!-- <div class = "startHere"> -->
-    <!-- <div id="portfolio">
-        <div class="container">
-          <div class="section-title text-center center">
-            <h2>Destination Grid View</h2>
-            <hr>
-          </div>
-          <div class="categories">
-            <ul class="cat">
-              <li>
-                <ol class="type">
-                  <li><a routerLink="signup"  onclick = "gridChange();" filter="*" class="active">All</a></li>
-                  <li><a  routerLink="signup" onclick = "gridChange();" data-filter=".web">Web Design</a></li>
-                  <li><a  routerLink="signup" onclick = "gridChange();" data-filter=".photography">Photography</a></li>
-                  <li><a  routerLink="signup" onclick = "gridChange();" data-filter=".product">Product Design</a></li>
-                </ol>
-              </li>
-            </ul>
-            <div class="clearfix"></div>
-          </div>
-          </div> -->
-
-
-
-
-
-
-
-
-<!-- </div>
-    </div>
-
-        <div class="ptext">
-
-        </div>
-</div>
-</div> -->
-
-
-&nbsp;
+ <!--Bootstrap4 JS files -->
+<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>    
 </body>
-
-
 </html>
 
