--- a/src/app/book/book.component.html
+++ b/src/app/book/book.component.html
@@ -49,54 +49,52 @@
         </ul>
         </div>
     </nav>
-    <div class="container">
-        <h1>Destination List
+    <!--<div class="container">-->
+       <!-- <h1>Destination List
             <a [routerLink]="['/book-create']" class="btn btn-default btn-lg">
               <span class="glyphicon glyphicon-plus" aria-hidden="true"></span>
             </a>
           </h1>
-       <button class="btn btn-success" (click)="logout()">Logout</button>
-      <table class="table">
-        <thead>
-          <tr>
-            <th>Destination Name</th>
-            <th>Destination Location</th>
-            <th>Destination Budget</th>
-            <th>Destination Best Time To Visit</th>
-          </tr>
-        </thead>
-        <tbody>
-          <tr *ngFor="let book of books">
-            <td>{{ book.isbn }}</td>
-            <td>{{ book.title }}</td>
-            <td>{{ book.author }}</td>
-            <td>{{ book.publisher }}</td>
-            <td><a [routerLink]="['/book-details', book._id]">Show Detail</a></td>
-          </tr>
-        </tbody>
-      </table>
-
-      <div class="container mb-5">
-          &nbsp;
-          <div class="portfolio-items">
-            <div  class="row itemsBlock">
-            <div class="col-md-4 col-sm-6 col-12"  style="color: #555;" *ngFor="let book of books">
-                <div class="card-body">
-                <img bind-src="book.publisher" alt="golden gate picture" class="img-fluid"/>
-                <h3 class="card-title mt-2">{{ book.isbn }}</h3>
-                <h5 class="card-subtitle">{{ book.author }}</h5>
-
-                <a href="#" class="btn btn-primary">See more..</a>
-                </div>
-                <br>
-            </div>
-            </div>
+       <button class="btn btn-success" (click)="logout()">Logout</button>-->
+      
+       <div class="container">
+        <h1>Destination List</h1>
+        <p>Add destinations</p><a [routerLink]="['/book-create']" class="btn btn-default btn-lg">
+          <i class="glyphicon glyphicon-plus" aria-hidden="true"></i>
+        </a>
+        <p>Below table identifies the destinations included by the Admin:</p>            
+        <table class="table table-bordered">
+          <thead>
+            <tr>
+              <th>Destination Name</th>
+              <th>Destination Location</th>
+              <th>Destination Budget</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr *ngFor="let book of books">
+              <td>{{ book.isbn }}</td>td>John</td>
+              <td>{{ book.title }}</td>
+              <td>{{ book.author }}</td>
+              <td><a [routerLink]="['/book-details', book._id]">Show Detail</a></td>
+            </tr>
+          </tbody>
+        </table>
+      </div>
+              
+      <div class="container">
+          <div class="card" style="color: #555;">
+          <div class="card-body">
+            <img bind-src="book.publisher" alt="picture of added location" class="img-fluid"/> 
+            <h3 class="card-title mt-2">{{ book.isbn }}</h3>
+            <h5 class="card-subtitle">{{ book.author }}</h5>
+            <h5 class="card-subtitle">{{ book.title }}</h5>
           </div>
+</div>
 </div>
 
 
-
-    </div>
+   <!-- </div>-->
 
  <!--Bootstrap4 JS files -->
 <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
