--- a/src/app/book/book.component.html
+++ b/src/app/book/book.component.html
@@ -83,14 +83,32 @@
       </div>
               
       <div class="container">
-          <div class="card" style="color: #555;">
+          <!--
+        <div class="portfolio-items">
+          <div  class="row itemsBlock">
+          <div class="col-md-4 col-sm-6 col-12"  style="color: #555;" *ngFor="let book of books">
+              <div class="card-body">
+              <img bind-src="book.publisher" alt="golden gate picture" class="img-fluid"/>
+              <h3 class="card-title mt-2">{{ book.isbn }}</h3>
+              <h5 class="card-subtitle">{{ book.author }}</h5>
+
+              <a href="#" class="btn btn-primary">See more..</a>
+              </div>
+              <br>
+          </div>
+          </div>
+        </div>-->
+        <div class="card-deck mb-5">
+        <div class="card" style="color: #555;" *ngFor="let book of books">
+          
           <div class="card-body">
             <img bind-src="book.publisher" alt="picture of added location" class="img-fluid"/> 
             <h3 class="card-title mt-2">{{ book.isbn }}</h3>
             <h5 class="card-subtitle">{{ book.author }}</h5>
             <h5 class="card-subtitle">{{ book.title }}</h5>
           </div>
-</div>
+        </div>
+      </div>
 </div>
 
 
