--- a/src/app/book/book.component.html
+++ b/src/app/book/book.component.html
@@ -83,7 +83,7 @@
       </div>
               
       <div class="container">
-          <!--
+          
         <div class="portfolio-items">
           <div  class="row itemsBlock">
           <div class="col-md-4 col-sm-6 col-12"  style="color: #555;" *ngFor="let book of books">
@@ -97,8 +97,10 @@
               <br>
           </div>
           </div>
-        </div>-->
+        </div>
         
+        <div class="portfolio-items">
+            <div  class="row itemsBlock">
         <div class="card" style="color: #555;" *ngFor="let book of books">
           
           <div class="card-body">
@@ -108,7 +110,8 @@
             <h5 class="card-subtitle mt-2">{{ book.title }}</h5>
           </div>
         </div>
-      
+        </div>
+      </div>
 </div>
 
 
