--- a/src/app/book/book.component.html
+++ b/src/app/book/book.component.html
@@ -88,13 +88,15 @@
         
           
           <div class="card"  style="color: #555;" *ngFor="let book of books">
-              <div class="card-body">
-                  <img bind-src="book.publisher" alt="picture of added location" class="img-fluid"/> 
+              <img bind-src="book.publisher" alt="picture of added location" class="card-img-top img-fluid"/>
+              <div class="card-body"> 
                   <h3 class="card-title mt-2">{{ book.isbn }}</h3>
                   <h5 class="card-subtitle mt-2">{{ book.author }}</h5>
                   <h5 class="card-subtitle mt-2">{{ book.title }}</h5> 
           </div>
           </div>
+          <div class="w-100 d-none d-sm-block d-md-none"></div>
+          <div class="w-100 d-none d-lg-block d-xl-none"></div>
        
         </div>
 </div>
