--- a/src/app/book/book.component.html
+++ b/src/app/book/book.component.html
@@ -83,10 +83,10 @@
       </div>
               
       <div class="container">
-        
+
+        <div class="row">
+        <div class="col-md-4 col-sm-6 col-12">
         <div class="card-deck">
-        
-          
           <div class="card"  style="color: #555;" *ngFor="let book of books">
               
               <div class="card-body"> 
@@ -96,11 +96,9 @@
                   <h5 class="card-subtitle mt-2">{{ book.title }}</h5> 
           </div>
           </div>
-          
-          <div class="w-100 d-none d-sm-block d-md-none"></div>
-          <div class="w-100 d-none d-lg-block d-xl-none"></div>
-       
         </div>
+      </div>
+    </div>
 </div>
 
    <!-- </div>-->
