--- a/src/app/book/book.component.html
+++ b/src/app/book/book.component.html
@@ -84,9 +84,9 @@
               
       <div class="container">
 
-        <div class="row">
-        <div class="col-md-4 col-sm-6 col-12">
-        <div class="card-deck">
+        <!--<div class="row itemsBlock">
+        <div class="col-md-4 col-sm-6 col-12">-->
+        <div class="card-group">
           <div class="card"  style="color: #555;" *ngFor="let book of books">
               
               <div class="card-body"> 
@@ -97,8 +97,8 @@
           </div>
           </div>
         </div>
-      </div>
-    </div>
+     <!-- </div>
+    </div>-->
 </div>
 
    <!-- </div>-->
