--- a/src/app/book/book.component.html
+++ b/src/app/book/book.component.html
@@ -89,7 +89,7 @@
         
           <div class="card"  style="color: #555;" *ngFor="let book of books">
               
-              <div class="card-body"> 
+              <div class="card-body mb-5"> 
                   <img bind-src="book.publisher" alt="picture of added location" class="img-fluid"/>
                   <h3 class="card-title mt-2">{{ book.isbn }}</h3>
                   <h5 class="card-subtitle mt-2">{{ book.author }}</h5>
