--- a/src/app/book/book.component.html
+++ b/src/app/book/book.component.html
@@ -87,9 +87,9 @@
         <div class="row itemsBlock">
         <div class="col-md-4 col-sm-6 col-12">
         
-          <div class="card"  style="color: #555;" *ngFor="let book of books">
+          <div class="card mb-5"  style="color: #555;" *ngFor="let book of books">
               
-              <div class="card-body mb-5"> 
+              <div class="card-body"> 
                   <img bind-src="book.publisher" alt="picture of added location" class="img-fluid"/>
                   <h3 class="card-title mt-2">{{ book.isbn }}</h3>
                   <h5 class="card-subtitle mt-2">{{ book.author }}</h5>
