--- a/src/app/book/book.component.html
+++ b/src/app/book/book.component.html
@@ -87,7 +87,7 @@
         <div class="row itemsBlock">
         <div class="col-md-4 col-sm-6 col-12">
         
-          <div class="card mb-5"  style="color: #555;" *ngFor="let book of books">
+          <div class="card mb-5 bg-light"  style="color: #555;" *ngFor="let book of books">
               
               <div class="card-body"> 
                   <img bind-src="book.publisher" alt="picture of added location" class="img-fluid"/>
