--- a/src/app/book/book.component.html
+++ b/src/app/book/book.component.html
@@ -57,7 +57,7 @@
           </h1>
        <button class="btn btn-success" (click)="logout()">Logout</button>-->
       
-       <div class="container">
+       <!--<div class="container">-->
         <h1>Destination List</h1>
         <p>Add destinations</p><a [routerLink]="['/book-create']" class="btn btn-default btn-lg">
           <i class="glyphicon glyphicon-plus" aria-hidden="true"></i>
@@ -80,7 +80,7 @@
             </tr>
           </tbody>
         </table>
-      </div>
+     <!-- </div> -->
               
       <div class="container">
 
