--- a/src/app/book/book.component.html
+++ b/src/app/book/book.component.html
@@ -49,12 +49,7 @@
         </ul>
         </div>
     </nav>
-    <!--<div class="container">-->
-       <!-- <h1>Destination List
-            <a [routerLink]="['/book-create']" class="btn btn-default btn-lg">
-              <span class="glyphicon glyphicon-plus" aria-hidden="true"></span>
-            </a>
-          </h1>
+    <!--
        <button class="btn btn-success" (click)="logout()">Logout</button>-->
       
        <div class="container">
@@ -83,7 +78,7 @@
      
               
       
-        <div class="row itemsBlock">
+        <div class="row">
         <div class="col-md-4 col-sm-6 col-12">
         
           <div class="card mb-5 bg-light"  style="color: #555;" *ngFor="let book of books">
