--- a/src/app/book/book.component.html
+++ b/src/app/book/book.component.html
@@ -80,7 +80,7 @@
       
         <div class="row">
         
-            <div class="col-sm-4 col-md-4 col-lg-4">
+            <div class="col-sm-4 col-sm-4 col-sm-4">
           <div class="card mb-5 bg-light"  style="color: #555;" *ngFor="let book of books">
               
               <div class="card-body"> 
