--- a/src/app/book/book.component.html
+++ b/src/app/book/book.component.html
@@ -93,9 +93,9 @@
         
      </div>-->
      <!---------------Carousel------------->
-     <div id="myDest" class="carousel slide" data-ride="carousel">
+     <div id="myDest" class="carousel slide" data-ride="carousel" style="color: #555;" *ngFor="let book of books">
       <!-- slideshow -->
-      <div class="carousel-inner" style="color: #555;" *ngFor="let book of books">
+      <div class="carousel-inner">
         <div class="item active">
           <img bind-src="book.publisher" alt="picture of added location" class="img-fluid"/>
             <div class="carousel-caption">
@@ -114,6 +114,33 @@
       <span class="carousel-control-next-icon"></span>
     </a>
     </div>
+    <!--
+    <div class="carousel-inner">
+      <div class="carousel-item active">
+          <img class="d-block w-100" src="https://placeimg.com/1080/500/animals" alt="First slide">
+          <div class="carousel-caption d-none d-md-block">
+              <h5>My Caption Title (1st Image)</h5>
+              <p>The whole caption will only show up if the screen is at least medium size.</p>
+          </div>
+      </div>
+      <div class="carousel-item">
+          <img class="d-block w-100" src="https://placeimg.com/1080/500/arch" alt="Second slide">
+      </div>
+      <div class="carousel-item">
+          <img class="d-block w-100" src="https://placeimg.com/1080/500/nature" alt="Third slide">
+      </div>
+  </div>
+  <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="sr-only">Previous</span>
+  </a>
+  <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      <span class="sr-only">Next</span>
+  </a>
+</div>
+-->
+
     </div>
 
 
