--- a/src/app/book/book.component.css
+++ b/src/app/book/book.component.css
@@ -25,10 +25,16 @@ color: #000 !important;
   width: auto;
 }
 
-.carousel-inner img {
-  margin: auto;
-}
-.carousel-inner {
-	padding-top: 5%;
+.portfolio-items {
+  padding: 40px 30px;
+  background-color: #888;
+  margin: 10px;
+  display: block;
+  box-sizing: border-box;
+  height: 600px;
+  width: 390px;
 }
 
+.portfolio-items img {
+  border: 1px solid #0000ff
+}
