--- a/src/app/book/book.component.css
+++ b/src/app/book/book.component.css
@@ -40,3 +40,9 @@ color: #000 !important;
 .card-body img {
   max-width: 100%;
 }
+
+.contain-image {
+  width: 500px;
+  height: 400px;
+  border: 1px solid #000;
+}
