--- a/src/app/book/book.component.css
+++ b/src/app/book/book.component.css
@@ -38,11 +38,6 @@ color: #000 !important;
 }
 
 .card-body img {
-  max-width: 100%;
+  width: 100%;
 }
 
-.contain-image {
-  width: 500px;
-  height: 400px;
-  border: 1px solid #000;
-}
