--- a/src/app/book/book.component.css
+++ b/src/app/book/book.component.css
@@ -27,13 +27,17 @@ color: #000 !important;
 
 .dest-format {
   margin: 10px;
-  display: block;
+  display: inline-block;
   box-sizing: border-box;
   max-width: 100%;
 }
 
 .card-body {
   border: 1px solid #0000ff
+}
+
+.card-body img {
+  max-width: 100%;
 }
 
 
