changed background image

--- a/src/app/book-create/book-create.component.html
+++ b/src/app/book-create/book-create.component.html
@@ -81,7 +81,7 @@
     <section class="add-events">
                 <div class="add-form-container">
                 <div class="row">
-                    <h2 style="color:#555454;">Add Events</h2>
+                    <h2 style="color:#555454;">Add Destination</h2>
                 </div>
                 
                 
@@ -140,7 +140,7 @@
         <!----------------------------------  Mobile Form ------------------------------------------- -->
             <div class="add-form-container-mobile">
                 <div class="row">
-                    <h2 style="color:#fff;">Add Events</h2>
+                    <h2 style="color:#fff;">Add Destinations</h2>
                 </div>
                 <!------- Customer name row --------->
                 <div class="row">
