--- a/src/app/book-create/book-create.component.html
+++ b/src/app/book-create/book-create.component.html
@@ -100,7 +100,7 @@
                         
                         <label for="city-activity">Destination Activity</label>
                         
-                        <input type="text" name="city-activity" id="city-activity" [(ngModel)]="book.title" placeholder="enter what you want to do, e.g. Hiking, Kayaking etc." minlength="3" maxlength="20" required data-errormessage-value-missing="Uh oh, somethings wrong!" data-errormessage-type-mismatch="Uh oh, somethings wrong! enter activity 3-20 characters long">
+                        <input type="text" name="city-activity" id="city-activity" [(ngModel)]="book.title" placeholder="enter what you want to do, e.g. Hiking etc." minlength="3" maxlength="20" required data-errormessage-value-missing="Uh oh, somethings wrong!" data-errormessage-type-mismatch="Uh oh, somethings wrong! enter activity 3-20 characters long">
                         
                        
                        
@@ -160,7 +160,7 @@
                         
 <label for="city-activity">Destination Activity</label>
                         
-<input type="text" name="city-activity" id="city-activity" [(ngModel)]="book.title" placeholder="enter what you want to do, e.g. Hiking, Kayaking etc." minlength="3" maxlength="20" required data-errormessage-value-missing="Uh oh, somethings wrong!" data-errormessage-type-mismatch="Uh oh, somethings wrong! enter activity 3-20 characters long">
+<input type="text" name="city-activity" id="city-activity" [(ngModel)]="book.title" placeholder="enter what you want to do, e.g. Hiking etc." minlength="3" maxlength="20" required data-errormessage-value-missing="Uh oh, somethings wrong!" data-errormessage-type-mismatch="Uh oh, somethings wrong! enter activity 3-20 characters long">
 
                       
 <!------- Destination Budget row --------->
