--- a/src/app/book-create/book-create.component.html
+++ b/src/app/book-create/book-create.component.html
@@ -110,7 +110,7 @@
                         <label for="budget">Destination Budget</label>
                         
                         
-                      <input type="text" name="budget" id="budget" [(ngModel)]="book.author" placeholder="enter dollar amount e.g. $500" pattern="[\$0-9]" required data-errormessage-value-missing="Uh oh, somethings wrong!" data-errormessage-type-mismatch="Uh oh, somethings wrong! Add dollar sign before number">
+                      <input type="text" name="budget" id="budget" [(ngModel)]="book.author" placeholder="enter dollar amount e.g. $500" required data-errormessage-value-missing="Uh oh, somethings wrong!" data-errormessage-type-mismatch="Uh oh, somethings wrong! Add dollar sign before number">
                   
                         
                         <!------- Destination Image --------->
